agent-core: task model, events, and reservations
Add the engine-independent foundation of the coordination core:

- agentcore.task: immutable TaskSpec (+builder), TaskStatus, typed Target
  value types (tile/region/entity/resource), ResourceCost, and the helper
  offer/contract types.
- agentcore.event: CoordinationEvent (brief §11.3 message schema, nullable
  act for board-internal transitions), drainable EventLog with a monotonic
  message-id counter, and the §11.7 RateLimiter (cooldown, urgent bypass,
  duplicate suppression, routine-act suppression).
- agentcore.reservation: soft ReservationRegistry for tiles/resources/regions
  with incompatible-overlap rejection, human-override yielding, resource
  budgets, and the never-negative invariant (brief §11.6, §23.5).

Deterministic, single-threaded by contract, no mindustry :core imports.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>